feat! single player game started

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,66 @@
 {
     "cSpell.words": [
+        "altındaki",
+        "anlatıcı",
+        "anlatırsanız",
+        "anlatmaya",
+        "anlatmayı",
         "appspot",
+        "başarılı",
+        "başında",
+        "belirlersiniz",
+        "bırakın",
+        "birini",
+        "çalışın",
+        "Eğer",
+        "ekrana",
+        "erince",
         "firebaseapp",
+        "geçersiniz",
+        "geldiğinde",
+        "hakkı",
+        "hedef",
         "HHLXY",
+        "için",
+        "Karşı",
+        "karta",
+        "kazanır",
+        "kelimelerden",
+        "kelimeleri",
+        "Kelimeyi",
+        "kişiyi",
+        "kontrolcü",
+        "kullanırsanız",
+        "kullanmadan",
+        "KURALLAR",
+        "limitini",
         "NAMX",
         "NMIJR",
+        "olarak",
+        "oyun",
+        "Oyun",
         "pinia",
         "Pinia",
-        "RTBN"
+        "puan",
+        "puanınız",
+        "RTBN",
+        "sayısını",
+        "seçin",
+        "Sıra",
+        "sıradaki",
+        "silinir",
+        "sizin",
+        "skora",
+        "skoru",
+        "sona",
+        "Süreniz",
+        "şekilde",
+        "takım",
+        "takıma",
+        "takımdan",
+        "takımınız",
+        "ulaştığında",
+        "yasaklı",
+        "zaman"
     ]
 }
