feat! rules added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,11 @@
         "appspot",
         "başarılı",
         "başında",
+        "Başla",
         "belirlersiniz",
         "bırakın",
         "birini",
+        "Cihaz",
         "çalışın",
         "Eğer",
         "ekrana",
@@ -33,23 +35,27 @@
         "kullanırsanız",
         "kullanmadan",
         "KURALLAR",
+        "Limiti",
         "limitini",
         "NAMX",
         "NMIJR",
         "olarak",
         "oyun",
         "Oyun",
+        "Oyuna",
         "pinia",
         "Pinia",
         "puan",
         "puanınız",
         "RTBN",
+        "Sayfa",
         "sayısını",
         "seçin",
         "Sıra",
         "sıradaki",
         "silinir",
         "sizin",
+        "Skor",
         "skora",
         "skoru",
         "sona",
