--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
+        "alanları",
+        "alertify",
+        "alertifyjs",
         "altındaki",
         "anlatıcı",
         "anlatırsanız",
@@ -14,6 +17,8 @@
         "birini",
         "Cihaz",
         "çalışın",
+        "datas",
+        "doldurunuz",
         "Eğer",
         "ekrana",
         "erince",
@@ -37,9 +42,11 @@
         "KURALLAR",
         "Limiti",
         "limitini",
+        "Lütfen",
         "NAMX",
         "NMIJR",
         "olarak",
+        "olmalıdır",
         "oyun",
         "Oyun",
         "Oyuna",
@@ -48,6 +55,7 @@
         "puan",
         "puanınız",
         "RTBN",
+        "saniye",
         "Sayfa",
         "sayısını",
         "seçin",
@@ -59,6 +67,7 @@
         "skora",
         "skoru",
         "sona",
+        "Süre",
         "Süreniz",
         "şekilde",
         "takım",
