feat! design fix and new words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "abasıyanık",
+        "Akdeniz",
         "alanları",
         "alertify",
         "alertifyjs",
@@ -9,41 +11,76 @@
         "anlatmaya",
         "anlatmayı",
         "appspot",
+        "aztekler",
+        "babil",
         "başarılı",
         "başında",
         "Başla",
+        "belgrad",
         "belirlersiniz",
         "bırakın",
         "birini",
+        "blanchett",
+        "bregoviç",
+        "bruni",
+        "Caretta",
+        "Ceneviz",
+        "cepkin",
         "Cihaz",
+        "Connor",
         "çalışın",
+        "çatalhöyük",
+        "çevreyolu",
         "datas",
+        "dekoder",
         "doldurunuz",
         "Eğer",
         "ekrana",
+        "elişi",
         "erince",
+        "Evcimik",
+        "feng",
         "firebaseapp",
         "geçersiniz",
         "geldiğinde",
+        "gencebay",
+        "goran",
+        "Gürses",
         "hakkı",
+        "hayko",
         "hedef",
         "HHLXY",
         "için",
+        "İnkalar",
+        "ispanyol",
+        "jackman",
+        "karamel",
         "Karşı",
         "karta",
         "kazanır",
         "kelimelerden",
         "kelimeleri",
         "Kelimeyi",
+        "Kızılay",
         "kişiyi",
+        "kokoş",
         "kontrolcü",
+        "Korel",
         "kullanırsanız",
         "kullanmadan",
         "KURALLAR",
+        "kuruyemiş",
+        "Kusturica",
         "Limiti",
         "limitini",
         "Lütfen",
+        "Manço",
+        "Memed",
+        "meyal",
+        "mungan",
+        "Müslüm",
         "NAMX",
+        "Nevizade",
         "NMIJR",
         "olarak",
         "olmalıdır",
@@ -52,13 +89,20 @@
         "Oyuna",
         "pinia",
         "Pinia",
+        "pitbull",
         "puan",
         "puanınız",
         "RTBN",
+        "ruhbilim",
+        "sağlak",
+        "sait",
         "saniye",
+        "Sarkozy",
         "Sayfa",
         "sayısını",
         "seçin",
+        "sensör",
+        "shui",
         "Sıra",
         "sıradaki",
         "silinir",
@@ -67,15 +111,23 @@
         "skora",
         "skoru",
         "sona",
+        "suluboya",
+        "Süleymanoğlu",
         "Süre",
         "Süreniz",
+        "şakşuka",
         "şekilde",
+        "şınav",
         "takım",
         "takıma",
         "takımdan",
         "takımınız",
+        "Tarık",
+        "terminatör",
         "ulaştığında",
+        "yağlıboya",
         "yasaklı",
-        "zaman"
+        "zaman",
+        "zamanaşımı"
     ]
 }
